# text-to-speech

./: LICENSE
UnifiedTTS/: README.md  __init__.py  core.py  exceptions.py  pyproject.toml
UnifiedTTS/providers/: __init__.py  base.py  cartesia.py  openai.py
webapp/: app.py
webapp/static/: style.css
webapp/templates/: index.html
