# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-tts"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A unified interface for various Text-to-Speech APIs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Choose your license
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai>=1.0.0",   # For OpenAI provider
    "requests>=2.20.0", # For Cartesia fallback or other potential REST providers
    # Add 'cartesia' if an official SDK exists and you use it:
    # "cartesia>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/unified-tts" # Example URL
Repository = "https://github.com/yourusername/unified-tts"

# Optional: Entry points or scripts if needed
# [project.scripts]
# unified-tts-cli = "unified_tts.cli:main"

[tool.setuptools.packages.find]
where = ["."]